crates/ink/tests/ui/contract/fail/impl-block-for-non-storage-01.stderr
error[E0308]: mismatched types
  --> tests/ui/contract/fail/impl-block-for-non-storage-01.rs:18:10
   |
18 |     impl NonContract {
   |          ^^^^^^^^^^^ expected struct `Contract`, found struct `NonContract`
   |
   = note: expected struct `IsSameType<Contract>`
              found struct `IsSameType<NonContract>`

error[E0599]: no function or associated item named `constructor_2` found for struct `Contract` in the current scope
  --> tests/ui/contract/fail/impl-block-for-non-storage-01.rs:20:16
   |
4  |     pub struct Contract {}
   |     --- function or associated item `constructor_2` not found for this struct
...
20 |         pub fn constructor_2() -> Self {
   |                ^^^^^^^^^^^^^
   |                |
   |                function or associated item not found in `Contract`
   |                help: there is an associated function with a similar name: `constructor_1`

error[E0599]: no function or associated item named `message_2` found for struct `Contract` in the current scope
  --> tests/ui/contract/fail/impl-block-for-non-storage-01.rs:25:16
   |
4  |     pub struct Contract {}
   |     --- function or associated item `message_2` not found for this struct
...
25 |         pub fn message_2(&self) {}
   |                ^^^^^^^^^
   |                |
   |                function or associated item not found in `Contract`
   |                help: there is a method with a similar name: `message_1`
